--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ button {
 .price-card__price {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  justify-self: end;
   font-weight: 800;
   font-size: 4rem;
   line-height: 55px;
@@ -124,6 +125,10 @@ button {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
 }
+.price-card__slider:focus {
+  border: 1px dashed red;
+}
+
 #price-slider {
   width: 100%;
   cursor: pointer;
@@ -325,7 +330,9 @@ input[type=range]:focus::-ms-fill-upper {
 .price-card__toggle-switch--yearly div {
   left: 24px;
 }
-
+.price-card__toggle-switch:focus {
+  border: 1px dashed red;
+}
 
 
 
