--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+.hidden {
+  position: absolute;
+  left: -10000px;
+  width: 1px;
+  height: 1px;
+  top: auto;
+  overflow: hidden;
+}
 html {
   font-size: 62.5%;
 }
